--- a/app/scss/mixins.scss
+++ b/app/scss/mixins.scss
@@ -35,8 +35,7 @@
 @mixin bp-tablet() {
   @media only screen
   and (min-width : 768px)
-  and (max-width : 1024px)
-  and (orientation : portrait) {
+  and (max-width : 1024px) {
     @content;
   }
 }
