--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -549,6 +549,15 @@ footer{
 	height: 400px;
 	@include display-flex();
 	@include flex-direction(column);
+
+	@include bp-tablet(){
+		width: 95%;
+	}
+
+	@include bp-mobile(){
+		width: 95%;
+		height: 450px;
+	}
 }
 
 .booking-number {
@@ -574,6 +583,11 @@ footer{
 	width: 100%;
 	height: 330px;
 	@include display-flex();
+
+	@include bp-mobile(){
+		flex-direction: column;
+		height: 380px;
+	}
 }
 
 .passenger-info, .flight-information {
@@ -589,10 +603,18 @@ footer{
 		border-bottom: solid 2px $mainFontColor;
 		margin-top: 15px;
 	}
+
+	@include bp-mobile(){
+		width: 100%;
+		height: 50%;
+	}
 }
 
 .flight-information {
 	border-right: solid 1px $bordercolor;
+	@include bp-mobile(){
+		border:none;
+	}
 }
 
 .outbound, .inbound {
@@ -605,6 +627,10 @@ footer{
 	@include align-items(center);
 	margin-top: 20px;
 
+	@include bp-mobile(){
+		width: 98%;
+	}
+
 }
 
 .bound-info {
@@ -612,6 +638,14 @@ footer{
 	font-weight: bold;
 	font-size: 25px;
 	margin-top: 5px;
+
+	@include bp-tablet(){
+		font-size: 20px;
+	}
+
+	@include bp-mobile(){
+		font-size: 15px;
+	}
 }
 
 .passengers {
