--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -13,7 +13,7 @@
 /*
     Display
  */
-.box-overlay .register, #accountContainer > .box-overlay, #search-bar form div, .previousFlights .prevFlight .previous-search, .search-result, .results, .filters, .filter, .result-box, .flight-info, .price-box, .info, .further-info-button, .further-info-box, .options div, .transport-info, .payment-page .container, .payment-page .center-box, .payment-page .wrap-row, .payment-page .center, .booking-wrapper, .booking-information, .booking-information div, .con-wrapper, .confirmation-info, .booking-number, .information, .passenger-info, .flight-information, .outbound, .inbound, .passengers {
+.box-overlay .register, #accountContainer > .box-overlay, #search-bar form div, .previousFlights .prevFlight .previous-search, .search-result, .results, .filters, .filter, .result-box, .flight-info, .price-box, .info, .further-info-button, .further-info-box, .options div, .transport-info, .payment-page .container, .payment-page .center-box, .payment-page .wrap-row, .payment-page .center, .booking-wrapper, .booking-information, .booking-information div, .con-wrapper, .confirmation-info, .booking-number, .information, .passenger-info, .flight-information, .outbound, .inbound, .passengers, .further-travel {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flexbox;
@@ -79,7 +79,7 @@
   -webkit-justify-content: flex-end;
   justify-content: flex-end; }
 
-.filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box, .booking-wrapper, .booking-information div, .con-wrapper, .booking-number {
+.filter, .price-box, .info, .further-info-button, .payment-page .container, .payment-page .center-box, .booking-wrapper, .booking-information div, .con-wrapper, .booking-number, .further-travel {
   -webkit-box-pack: center;
   -moz-box-pack: center;
   -webkit-flex-pack: center;
@@ -367,6 +367,9 @@ a {
   .further-info-button p {
     color: #4FC3F7;
     border-bottom: 2px solid #4FC3F7; }
+    @media only screen and (max-width: 736px) {
+      .further-info-button p {
+        font-size: 15px; } }
 
 .further-info-box {
   height: 150px;
@@ -387,6 +390,9 @@ a {
   text-transform: uppercase;
   font-weight: bold;
   padding-bottom: 5px; }
+  @media only screen and (max-width: 736px) {
+    .option-header {
+      font-size: 15px; } }
 
 .transport-info i {
   padding-left: 8px; }
@@ -399,12 +405,10 @@ a {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box; }
-
 .payment-page .container {
   margin-top: 100px;
   width: 100%;
   height: 100vh; }
-
 .payment-page .center-box {
   padding: 20px;
   width: 40%;
@@ -416,7 +420,6 @@ a {
   @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
     .payment-page .center-box {
       width: 70%; } }
-
 .payment-page input[type="text"] {
   padding: 5px;
   height: 35px;
@@ -424,20 +427,16 @@ a {
   border-style: none;
   border-radius: 3px;
   width: 100%; }
-
 .payment-page .row {
   color: white;
   padding: 5px;
   min-height: 50px;
   width: 100%; }
-
 .payment-page .wrap-row {
   padding: 5px;
   width: 100%; }
-
 .payment-page .small-item {
   width: 31%; }
-
 .payment-page button {
   width: 100px;
   height: 50px;
@@ -567,3 +566,21 @@ a {
   width: 100%;
   height: 100px;
   margin-top: 30px; }
+
+.further-travel {
+  width: 100%;
+  height: 100px;
+  margin-top: 30px;
+  padding: 15px; }
+  .further-travel p {
+    color: #4FC3F7;
+    font-weight: bold;
+    font-size: 20px; }
+    @media only screen and (max-width: 736px) {
+      .further-travel p {
+        font-size: 15px; } }
+  @media only screen and (max-width: 736px) {
+    .further-travel {
+      margin-top: 10px; } }
+
+/*# sourceMappingURL=styles.css.map */
